Update small remarks

--- a/src/main/resources/static/examples/index.html
+++ b/src/main/resources/static/examples/index.html
@@ -21,10 +21,10 @@
 <script th:src="@{/webjars/ekko-lightbox/dist/ekko-lightbox.min.js}"></script>
 <script th:src="@{/webjars/draggabilly/draggabilly.pkgd.min.js}"></script>
 <script th:src="@{/webjars/webrtc-adapter/release/adapter.js}"></script>
-<script th:src="@{/webjars/demo-console/index.js}"></script>
+<script th:src="@{/webjars/demo-console/videoCall.js}"></script>
 
 <script th:src="@{/js/kurento-utils.js}"></script>
-<script th:src="@{/js/index.js}"></script>
+<script th:src="@{/js/videoCall.js}"></script>
 <title>Kurento Tutorial 4: Video Call 1 to 1 with WebRTC</title>
 </head>
 <body>
